--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,7 +44,9 @@
         "xstddef": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "dodatnie_liczby_refactored": "cpp",
+        "lab5zdodatnimiliczbami": "cpp"
     },
     "C_Cpp.errorSquiggles": "Enabled"
 }
