--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,7 +46,8 @@
         "xtr1common": "cpp",
         "xutility": "cpp",
         "dodatnie_liczby_refactored": "cpp",
-        "lab5zdodatnimiliczbami": "cpp"
+        "lab5zdodatnimiliczbami": "cpp",
+        "vector": "cpp"
     },
     "C_Cpp.errorSquiggles": "Enabled"
 }
